...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SwiftExample" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ev6-en-4EX">
                                <rect key="frame" x="60" y="241.66666666666663" width="273" height="32"/>
                                <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="28"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jth-wP-Fkc">
                                <rect key="frame" x="32" y="321.66666666666669" width="329" height="34"/>
                                <accessibility key="accessibilityConfiguration" label="txtUserName"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="5W1-WF-so4"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TcL-7d-uEf">
                                <rect key="frame" x="32" y="371.66666666666669" width="329" height="34"/>
                                <accessibility key="accessibilityConfiguration" label="txtPassword"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="91A-PG-3Wf"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MlP-GF-7JH">
                                <rect key="frame" x="32" y="443.66666666666669" width="329" height="35"/>
                                <accessibility key="accessibilityConfiguration" label="loginbutton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Login"/>
                                <connections>
                                    <action selector="signIn" destination="BYZ-38-t0r" eventType="touchUpInside" id="5J7-Id-2c0"/>
                                </connections>
                            </button>
...
